# pgcli-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  completions.rs  mod.rs
src/connection/: config.rs  mod.rs  pool.rs  tls.rs
src/executor/: mod.rs  pipeline.rs  query.rs
src/export/: csv.rs  json.rs  mod.rs  sql.rs
src/meta/: bookmarks.rs  commands.rs  introspection.rs  mod.rs
src/output/: formats.rs  mod.rs  pager.rs  spinner.rs  stats.rs  table.rs
src/protocol/: auth.rs  messages.rs  mod.rs  types.rs
src/repl/: editor.rs  highlighter.rs  history.rs  mod.rs  schema_cache.rs
src/scripting/: mod.rs  runner.rs
