[package]
name = "pgcli-rs"
version = "0.1.0"
edition = "2021"
authors = ["pgcli-rs contributors"]
description = "A self-contained PostgreSQL CLI client written in pure Rust"
license = "MIT"
repository = "https://github.com/jhonsferg/pgcli-rs"
keywords = ["postgresql", "cli", "database", "psql"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "pgcli"
path = "src/main.rs"

[lib]
name = "pgcli_rs"
path = "src/lib.rs"

[features]
default = ["native-tls-backend"]
native-tls-backend = ["tokio-native-tls", "native-tls", "postgres-native-tls"]
rustls-backend = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots"]
integration-tests = []

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# PostgreSQL wire protocol (pure Rust, no libpq)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
atty = "0.2"

# TLS support
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
tokio-rustls = { version = "0.24", optional = true }
rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.25", optional = true }

# REPL / interactive editing
rustyline = { version = "12", features = ["with-file-history"] }
rustyline-derive = "0.9"

# Terminal output and formatting
crossterm = "0.27"
comfy-table = "7"
colored = "2"

# Output formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
config = "0.13"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
home = "0.5"
dirs = "5"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
rand = "0.8"
rpassword = "7"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["integration-tests"]

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
